...
            "state" : "translated",
            "value" : "Kontynuuj rysowanie"
          }
        }
      }
    },
    "drawing.done" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Preview drawing"
          }
...
            "state" : "translated",
            "value" : "Rysunek wysłany"
          }
        }
      }
    },
    "drawing.start" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start drawing"
          }
...
            "state" : "translated",
            "value" : "niegotowy/a"
          }
        }
      }
    },
    "lobby.ready" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "I'm ready"
          }
...
            "state" : "translated",
            "value" : "Aparat jest niedostępny. Możesz wybrać zdjęcie z biblioteki."
          }
        }
      }
    },
    "photoAnswer.chooseLibrary" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Choose from library"
          }
...
    },
    "photoAnswer.sent" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Photo sent"
          }
        },
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zdjęcie wysłane"
...
            "state" : "translated",
            "value" : "Przesyłanie zdjęcia: %d%%"
          }
        }
      }
    },
    "photoAnswer.usePhoto" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Use this photo"
          }
...
    },
    "photoAnswer.waitingPlayers" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Waiting for the other players"
          }
        },
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Czekamy na pozostałych graczy"
...
            "state" : "translated",
            "value" : "Wybierz najlepszą odpowiedź"
          }
        }
      }
    },
    "textanswer.vote_waiting" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Waiting for the other players"
          }
...
            "state" : "translated",
            "value" : "Czekamy na pozostałych graczy"
          }
        }
      }
    },
    "textanswer.waiting" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Waiting for the other players"
          }
...
